force-app/main/default/objects/Trigger_Setting__mdt/Trigger_Setting__mdt.object-meta.xml
<CustomObject>
    <description
    >Registers trigger handler classes per SObject, with ordering, recursion depth and an optional bypass custom permission.</description>
    <label>Trigger Setting</label>
    <pluralLabel>Trigger Settings</pluralLabel>
</CustomObject>