force-app/main/default/objects/Trigger_Setting__mdt/fields/Bypass_Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Custom_Permission__c</fullName>
    <description>Optional custom permission API name. Users holding it skip this handler.</description>
    <label>Bypass Custom Permission</label>
    <length>80</length>
    <type>Text</type>
</CustomField>