force-app/main/default/objects/Trigger_Setting__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <description>Handlers for the same SObject run in ascending order.</description>
    <label>Execution Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>