force-app/main/default/objects/Trigger_Setting__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to disable the handler without a deployment of Apex code.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>