force-app/main/default/objects/Trigger_Setting__mdt/fields/Max_Recursion_Depth__c.field-meta.xml
<CustomField>
    <fullName>Max_Recursion_Depth__c</fullName>
    <description>Maximum re-entrant invocations per transaction. Defaults to 1.</description>
    <label>Max Recursion Depth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>