force-app/main/default/objects/Trigger_Setting__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>API name of the SObject whose trigger runs this handler, e.g. Case.</description>
    <label>SObject API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>